--- a/Plantilla.html
+++ b/Plantilla.html
@@ -13,8 +13,8 @@
     <nav class="nav">
         <div class="contact-info">
             <div class="option">
-                <a href="inicio.html"><i class="fa fa-home"></i></a>
-                <div class="text"><a href="inicio.html">INICIO</a></div>
+                <a href="index.html"><i class="fa fa-home"></i></a>
+                <div class="text"><a href="index.html">INICIO</a></div>
             </div>
             <div class="option">
                 <a href="#"><i class="fas fa-bookmark"></i></a>
@@ -29,8 +29,8 @@
                 <div class="text"><a href="galeria.html">GALERIA</a></div>
             </div>
             <div class="option">
-                <a href="Contacto.html"><i class="fas fa-mobile-alt"></i></a> 
-                <div class="text"><a href="Contacto.html">CONTACTOS</a></div>
+                <a href="contacto.html"><i class="fas fa-mobile-alt"></i></a> 
+                <div class="text"><a href="contacto.html">CONTACTOS</a></div>
             </div>
         </div>
     </nav>
