--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="text"><a href="galeria.html">GALERIA</a></div>
             </div>
             <div class="option">
-                <a href="Contacto.html"><i class="fas fa-mobile-alt"></i></a> 
+                <a href="contacto.html"><i class="fas fa-mobile-alt"></i></a> 
                 <div class="text"><a href="contacto.html">CONTACTOS</a></div>
             </div>
         </div>
