--- a/historia.html
+++ b/historia.html
@@ -148,6 +148,6 @@
             </div>
         </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/historia.js"></script>
 </body>
 </html>
