--- a/index.html
+++ b/index.html
@@ -61,19 +61,27 @@
                 </div>
         </div>
     </header>
-    <section class="catalago">
-        <div class="sobre" id="sobre">
-            <h1>Sobre Dibulla</h1>
+    <section  class="catalogo2">
+    <div class="container_catalogo">
+        <div class="text_catalogo">
+            <p>El municipio de Dibulla está ubicado en una posición geográfica que potencializa los diversos renglones socioeconómicos de la región: por un lado tiene la influencia de la Sierra Nevada de Santa Marta, que le permite tener una variedad considerable de los picos térmicos; por otro está el mar Caribe que le permite tener un acceso a la riqueza Marina. Por otro lado, el municipio de Dibulla se beneficia por el paso de la Troncal del Caribe a lo largo de su extensión intercomunicando varios de sus corregimientos con el resto de la Guajira y hacia la Costa Caribe a través del Magdalena.</p>
         </div>
-        <div class="contenido">
-            <div class="dibulla">
-                <p>El municipio de Dibulla está ubicado en una posición geográfica que potencializa los diversos renglones socioeconómicos de la región: por un lado tiene la influencia de la Sierra Nevada de Santa Marta, que le permite tener una variedad considerable de los picos térmicos; por otro está el mar Caribe que le permite tener un acceso a la riqueza Marina. Por otro lado, el municipio de Dibulla se beneficia por el paso de la Troncal del Caribe a lo largo de su extensión intercomunicando varios de sus corregimientos con el resto de la Guajira y hacia la Costa Caribe a través del Magdalena.</p>
-                <img class="izquierda" id="imagen1" src="https://scontent-bog1-1.xx.fbcdn.net/v/t1.6435-9/121262233_3362648180493065_2790376156254628644_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeFTEgpR9mMTpv9cV-kCnQNVB0ghKTwd5xIHSCEpPB3nEooYwUe4h7VGTGm6pIjpzFzOOES1-1X5y9RJo__gfBfE&_nc_ohc=Z3csfn9NUv0AX8JlFOA&_nc_ht=scontent-bog1-1.xx&oh=3b8a54cc71c367ea0f2561a199263833&oe=619A66BE" alt="dibulla">
-                <p>La temperatura promedio es de 30°C con humedad relativa de entre 70 y 75%. La pluviometría es de 1200 mm al año, con una alta evaporación qué alcanzan los 1495 mm, lo que genera desequilibrio climatológico regional. El clima es predominantemente seco. La región se define como zona de dos períodos muy bien delimitado que son: lluviosos, entre los meses de abril a junio y de septiembre a noviembre, seco entre los meses de julio a agosto y de diciembre a marzo.</p>
-                <img class="derecha" id="imagen2" src="https://scontent.fbaq2-2.fna.fbcdn.net/v/t1.6435-9/121504294_3362648523826364_2232395498977876922_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHvD6ZPToNZEE12-UIbk5MrOQhqyeyKHZg5CGrJ7IodmLCXiRu43ThaQOAwwD5hXnnwy-B8_FHdo2wPrvWvKp9D&_nc_ohc=q4lxjlNT2HMAX-Roz2n&_nc_ht=scontent.fbaq2-2.fna&oh=bfc70afe69cf075134415d5a31941b3e&oe=619F7012" alt="">
-            </div>
+        <div class="catalogo_img">
+            <img class="izquierda" id="imagen1" src="photo1636243246 (1).jpeg" alt="">
         </div>
-    </section>
+    </div>
+
+    <div class="container_catalogo">
+        <div class="img_right">
+            <img  class="derecha" id="imagen2" src="photo1636243246.jpeg" alt="">
+        </div>
+        <div class="text_catalogo">
+            <p>La temperatura promedio es de 30°C con humedad relativa de entre 70 y 75%. La pluviometría es de 1200 mm al año, con una alta evaporación qué alcanzan los 1495 mm, lo que genera desequilibrio climatológico regional. El clima es predominantemente seco. La región se define como zona de dos períodos muy bien delimitado que son: lluviosos, entre los meses de abril a junio y de septiembre a noviembre, seco entre los meses de julio a agosto y de diciembre a marzo.</p>
+        </div>
+        
+    </div>
+
+</section>
     <div class="wave">
         <svg  
             x="0px"
