--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <section  class="catalogo2">
     <div class="container_catalogo">
         <div class="text_catalogo">
+            <h1>Sobre Dibulla</h1>
             <p>El municipio de Dibulla está ubicado en una posición geográfica que potencializa los diversos renglones socioeconómicos de la región: por un lado tiene la influencia de la Sierra Nevada de Santa Marta, que le permite tener una variedad considerable de los picos térmicos; por otro está el mar Caribe que le permite tener un acceso a la riqueza Marina. Por otro lado, el municipio de Dibulla se beneficia por el paso de la Troncal del Caribe a lo largo de su extensión intercomunicando varios de sus corregimientos con el resto de la Guajira y hacia la Costa Caribe a través del Magdalena.</p>
         </div>
         <div class="catalogo_img">
