--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <div class="container_catalogo">
+    <div class="container_catalogo" id="reverse">
         <div class="img_right">
             <img  class="derecha" id="imagen2" src="img/photo1636243246.jpeg" alt="">
         </div>
