--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,7 @@
         </div>
     </nav>
     <header>
-        <div class="barrita"><img src="img/dibullalogo.jpg"><p>Dibulla Distrito Turistico Cultural</p>
+        <div class="barrita"><img src="img/dibullalogo.png"><p>Dibulla Distrito Turistico Cultural</p>
         </div>
         <div class="titulo">
         <h1>Contacto</h1>
