--- a/Plantilla.html
+++ b/Plantilla.html
@@ -35,6 +35,8 @@
         </div>
     </nav>
     <header>
+        <div class="barrita"><img src="img/dibullalogo.png"><p>Dibulla Distrito Turistico Cultural</p>
+        </div>
         <div class="titulo">
         <h1>Dibulla</h1>
         </div>
