--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="option">
                 <a href="Contacto.html"><i class="fas fa-mobile-alt"></i></a> 
-                <div class="text"><a href="Contacto.html">CONTACTOS</a></div>
+                <div class="text"><a href="contacto.html">CONTACTOS</a></div>
             </div>
         </div>
     </nav>
