--- a/Plantilla.html
+++ b/Plantilla.html
@@ -83,30 +83,46 @@
                                     S0.5,48.875,0.5,48.875V108h1920h1920V48.875C3840.5,48.875,3602.5,97.739,3360.5,97.739z"/>
                                 </svg>
     </div>
-    <footer class="fin">
-        <div class="fin-dibulla">
-        <h1>Dibulla</h1>
-        </div>
-        <div class="explorar">
-            <h3>Explorar</h3>
-            <ul>
-                <li> <a href="#sobre">Sobre Dibulla</a> </li>
-                <li>Historia</li>
-                <li>Contacto</li>
-            </ul>
-        </div>
-        <div class="contenedor-logos">
-            <a href="" class="logos"><i class="fab fa-facebook-square"></i>Codding Noose Group</a>
-            <a href="" class="logos"><i class="fab fa-instagram"></i>Codding Noose Group</a>
-            <a href="" class="logos"><i class="fab fa-twitter"></i>Codding Noose Group</a>
-            <div class="contacto">
-            <h3>
-                contactos
-            </h3>
-            <a href=""><i class="fas fa-mobile-alt"></i> +57 300 000 0000 </a>
-            <a href=""><i class="fas fa-envelope"></i> coddingnoosegroup@gmail.com</a>
+
+
+<footer>
+
+        <div class="container__footer">
+            <div class="box__footer">
+                <div class="logo">
+                    <h1>Dibulla</h1>
+                </div>
+                <div class="terms">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit cum cumque velit libero officiis quam doloremque reprehenderit quae corporis! Delectus architecto officia praesentium atque laudantium, nam deleniti sapiente deserunt.</p>
+                </div>
             </div>
+            <div class="box__footer">
+                <h2>Soluciones</h2>
+                <a href="https://www.google.com">App Desarrollo</a>
+                <a href="#">App Marketing</a>
+                <a href="#">IOS Desarrollo</a>
+                <a href="#">Android Desarrollo</a>
+            </div>
+
+            <div class="box__footer">
+                <h2>Compañia</h2>
+                <a href="#">Acerca de</a>
+                <a href="#">Trabajos</a>
+                <a href="#">Procesos</a>
+                <a href="#">Servicios</a>              
+            </div>
+
+            <div class="box__footer">
+                <h2>Redes Sociales</h2>
+                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+                <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+            </div>
+
         </div>
+
+    
     </footer>
 </body>
 </html>
