--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/sobre_nosotros.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <title>Plantilla</title>
+    <title>Sobre Nosotros</title>
 </head>
 <body>
     <nav class="nav">
