--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="cajas_father">
             <div class="cajas">
                 <div class="sombra">
-                <a href=""><i class="fas fa-hotel"></i></a>
+                <a href="paginas/hoteles.html"><i class="fas fa-hotel"></i></a>
                 <h1>Hoteles</h1>
                 </div>
                 <img src="https://www.hotelcasinointernacional.com.co/uploads/galeriahoteles/piscinaCasino.jpg" alt="">
