--- a/paginas/hoteles.html
+++ b/paginas/hoteles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,8 +13,8 @@
     <nav class="nav">
         <div class="contact-info">
             <div class="option">
-                <a href="index.html"><i class="fa fa-home"></i></a>
-                <div class="text"><a href="index.html">INICIO</a></div>
+                <a href="dibulla/index.html"><i class="fa fa-home"></i></a>
+                <div class="text"><a href="dibulla/index.html">INICIO</a></div>
             </div>
             <div class="option">
                 <a href="#"><i class="fas fa-bookmark"></i></a>
