--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="cajas">
                 <div class="sombra">
                 <a href="paginas/hoteles.html"><i class="fas fa-hotel"></i></a>
-                <h1>Hoteles</h1>
+                <a href="paginas/hoteles.html"><h1>Hoteles</h1></a>
                 </div>
                 <img src="https://www.hotelcasinointernacional.com.co/uploads/galeriahoteles/piscinaCasino.jpg" alt="">
                 
