--- a/paginas/hoteles.html
+++ b/paginas/hoteles.html
@@ -13,8 +13,8 @@
     <nav class="nav">
         <div class="contact-info">
             <div class="option">
-                <a href="dibulla/index.html"><i class="fa fa-home"></i></a>
-                <div class="text"><a href="dibulla/index.html">INICIO</a></div>
+                <a href="../index.html"><i class="fa fa-home"></i></a>
+                <div class="text"><a href="../index.html">INICIO</a></div>
             </div>
             <div class="option">
                 <a href="#"><i class="fas fa-bookmark"></i></a>
