--- a/paginas/hoteles.html
+++ b/paginas/hoteles.html
@@ -21,16 +21,16 @@
                 <div class="text"><a href="#">SOBRE NOSOTROS</a></div>
             </div>
             <div class="option">
-                <a href="historia.html"><i class="fas fa-landmark"></i></a>
-                <div class="text"><a href="historia.html">HISTORIA</a></div>
+                <a href="../historia.html"><i class="fas fa-landmark"></i></a>
+                <div class="text"><a href="../historia.html">HISTORIA</a></div>
             </div>
             <div class="option">
-                <a href="galeria.html"><i class="far fa-images"></i></a>
-                <div class="text"><a href="galeria.html">GALERIA</a></div>
+                <a href="../galeria.html"><i class="far fa-images"></i></a>
+                <div class="text"><a href="../galeria.html">GALERIA</a></div>
             </div>
             <div class="option">
-                <a href="Contacto.html"><i class="fas fa-mobile-alt"></i></a> 
-                <div class="text"><a href="Contacto.html">CONTACTOS</a></div>
+                <a href="../Contacto.html"><i class="fas fa-mobile-alt"></i></a> 
+                <div class="text"><a href="../Contacto.html">CONTACTOS</a></div>
             </div>
         </div>
 
