--- a/paginas/hoteles.html
+++ b/paginas/hoteles.html
@@ -17,8 +17,8 @@
                 <div class="text"><a href="../index.html">INICIO</a></div>
             </div>
             <div class="option">
-                <a href="#"><i class="fas fa-bookmark"></i></a>
-                <div class="text"><a href="#">SOBRE NOSOTROS</a></div>
+                <a href="../sobre_nosotros.html"><i class="fas fa-bookmark"></i></a>
+                <div class="text"><a href="../sobre_nosotros.html">SOBRE NOSOTROS</a></div>
             </div>
             <div class="option">
                 <a href="../historia.html"><i class="fas fa-landmark"></i></a>
