--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                 </div>
                 <div class="img-portada">
                     <ul>
-                        <li><img src="https://scontent.fbaq6-1.fna.fbcdn.net/v/t1.6435-9/121586521_3362535537170996_5925540949159532847_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeGcTQdYJJvyxot7j_hIpicdijY0K3DXALCKNjQrcNcAsGmTBR4A8NukqSsIC12MOOYx-_mI0ZYAzGn4BhJNMgtY&_nc_ohc=3LQT9SgWuLkAX9gtGyk&_nc_ht=scontent.fbaq6-1.fna&oh=f645a0e3bab16cdd3cdf130d900a931b&oe=61AA3481" alt=""></li>
-                        <li><img src="https://scontent.fbaq6-1.fna.fbcdn.net/v/t1.6435-9/121259675_3362535797170970_1254855118916064579_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHOwCNyWKD6-5sT0d9RziR1_x3klzmBv_n_HeSXOYG_-d5aHKLcfUmg-7c5wNNJOL1m2qtCCFZ-Mvh8tYl52EdK&_nc_ohc=AZlUOlM00iAAX9UEX-K&tn=wwFiYmoYcRYNRk6s&_nc_ht=scontent.fbaq6-1.fna&oh=9f24d10276442cf5a7f170b2e2336945&oe=61AAFE62" alt=""></li>
-                        <li><img src="https://scontent.fbaq6-1.fna.fbcdn.net/v/t1.6435-9/121533791_3362535300504353_7611149210060285233_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHfMGAZBq0CerHtl-NXVYW4VHUqqFiQUhlUdSqoWJBSGb32UOQi0pM0zB0rVzPCwmE_yVV0qIPVN9w5krt8eP32&_nc_ohc=kQth0dbgNN0AX_irQtB&_nc_ht=scontent.fbaq6-1.fna&oh=5f5c9530739ea50033c585ddccbe0bdb&oe=61AB24D1" alt=""></li>
-                        <li><img src="https://scontent.fbaq6-1.fna.fbcdn.net/v/t1.6435-9/121476423_3362535080504375_761241933668253954_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeGC9rgwWUdLemLeYoAd-VB8XBEATgc1ZEVcEQBOBzVkRcK4aC9AltnDfmAneQbQrKXFTwZQdn0w2yodYFcw1cGL&_nc_ohc=fkonPIRlzb4AX9N9jzT&_nc_ht=scontent.fbaq6-1.fna&oh=a07a269c3ab1ab62b6986fd2fdb79cda&oe=61A9887A" alt=""></li>
+                        <li><img src="img/Dibulla-Guajira.jpg" alt=""></li>
+                        <li><img src="img/img22.jpg" alt=""></li>
+                        <li><img src="img/img10.jpg" alt=""></li>
+                        <li><img src="img/img8.jpg" alt=""></li>
                     </ul>
                 </div>
             
